chore: Se agrega jest y supertest para las pruebas de las apis
